feat(token-claims): handle token for free user and premium user
